# predmaint-ml-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.api  Makefile  README.md  README_DEEP.md  docker-compose.yml  ecs-task.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
configs/: prometheus.yml  training.yaml
configs/grafana/dashboards/: dashboard-provider.yml  predmaint.json
docker/: Dockerfile.api  ecs-task.json
notebooks/: 00_exploration.ipynb
scripts/: deploy.sh
src/api/: main.py
src/core/: config.py  features.py  loader.py
src/dashboard/: app.py  styles.css
src/dashboard/sections/: __init__.py  dataset.py  drift.py  hero.py  prediction.py  status.py
src/data/: pipeline.py  transformer.py
src/features/: build_features.py
src/ingestion/: ingest.py
src/models/: train.py
src/monitoring/: drift.py  drift_detector.py
src/monitoring/drift/: detector.py
src/monitoring/metrics/: prometheus.py
src/pipelines/: data.py  monitoring.py  pipeline.py  training.py  training_flow.py
src/training/: monitor.py  train.py
tests/: conftest.py  test_api.py  test_drift.py  test_loader.py  test_monitor.py  test_pipeline.py  test_train.py  test_transformer.py
tests/api/: test_api.py
tests/core/: test_features.py  test_loader.py
tests/monitoring/drift/: test_detector.py
tests/pipelines/: test_monitor.py  test_pipeline.py  test_train.py
