[project]
name = "predmaint-ml-platform"
version = "0.1.0"
description = "End-to-End Predictive Maintenance with Automated Retraining, Drift Detection & Production Monitoring"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.2.0,<3",
    "prefect>=3.6.21",
    "pyarrow>=14.0.0,<24",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.0",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pip>=26.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "seaborn>=0.13.2",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
